--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -179,7 +179,7 @@
                 <br />
                 <span class="soustitre">Heures de la formation spécifique</span>
                 <br />
-                <span class="data">@Html.DisplayFor(x => Model.DevisMinistere.nbHeureFrmSpecifique)</span>
+                <span class="data">@Html.DisplayFor(x => Model.DevisMinistere.nbHeureFrmSpecifique) h</span>
                 <br />
                 <span class="soustitre">Total</span>
                 <br />
