--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
@@ -33,7 +33,7 @@
                                 </button>
                             </span>
                         </div>
-                        @Html.CheckBox("chkRecherche")Seulement Programme et compétence
+                        @Html.CheckBox("chkRecherche")Seulement Devis du ministère et compétence
                         @*<input type="checkbox" name="chkRecherche" value="true"> Seulement Programme et compétence*@
                     </div>
                 </div>
