--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -6,6 +6,7 @@
     background-color: #f2f2f2;
     background-repeat: no-repeat;
     background-position: bottom left;
+    background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,7 +21,7 @@ li {
 
 hr {
     border: none;
-    border-bottom: 1px solid #929ab1;
+    border-bottom: 1px solid #B5B5B5;
 }
 
 a:hover {
@@ -48,7 +49,7 @@ input, button {
     color: initial;
     border-radius: initial;
     border: none;
-    border-bottom: 2px solid #929ab1;
+    border-bottom: 2px solid #B5B5B5;
     background-color: #f2f2f2;
 }
 
@@ -93,6 +94,10 @@ textarea {
     transition: 0.1s;
 }
 
+.center-align {
+    text-align: center;
+}
+
 .fancy-button span {
     word-break: break-all;
 }
@@ -123,7 +128,7 @@ input[type="file"] {
 }
 
 .form-box {
-    margin: 15px;
+    margin: 40px;
     padding: 40px;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0,0,0,0.25);
@@ -143,66 +148,8 @@ input[type="file"] {
     background-color: #f2f2f2;
 }
 
-.field-box .form-control {
+.field-box .form-control, .form-control.bright {
     background-color: #fff;
-}
-
-.margin-auto {
-    margin: auto;
-}
-
-.single-action {
-    margin-top: 75px;
-}
-
-.crud-list {
-    padding: 15px;
-}
-
-.crud-list table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0 5px;
-}
-
-.crud-list th, .crud-list td {
-    padding: 10px 20px;
-}
-
-.crud-list th {
-    font-weight: normal;
-    background-color: #0d5ec9;
-    color: #FFFFFF;
-}
-
-.crud-list td {
-    background-color: #e7ecf2;
-    transition: 0.1s;
-}
-
-.crud-list tr:hover td {
-    background-color: #f2f4f7;
-}
-
-.crud-list a {
-    background: none;
-    border: none;
-    color: #083a7c;
-}
-
-.crud-list button:hover {
-    color: #0d5ec9;
-}
-
-.crud-list .action-cell {
-    width: 15%;
-    text-align: center;
-    background-color: #f2f4f7;
-}
-
-.crud-list .action-cell-header {
-    padding: 10px 5px;
-    text-align: center;
 }
 
 .element {
