--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -17,56 +17,60 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div id="portail" class="container-fluid">
-        <div class="row row-eq-height">
-            <div id="image" class="col-md-8 col-sm-6"></div>
-            <div id="main" class="col-md-4 col-sm-6">
-                <div id="login">
-                    <img id="portail-logo" src="~/Content/Images/portail-logo.png" />
-                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-xs-3 control-label" })
-                            <div class="col-xs-9">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-xs-3 control-label" })
-                            <div class="col-xs-9">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-xs-offset-3 col-xs-9">
-                                <div class="checkbox">
-                                    @Html.CheckBoxFor(m => m.RememberMe)
-                                    @Html.LabelFor(m => m.RememberMe)
-                                </div>
-                            </div>
-                        </div>
-                        <div id="submit" class="form-group">
-                            <input type="submit" value="Connexion" class="fancy-button"/>
-                        </div>
-                    }
+
+@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    <section id="portail" class="container-fluid">
+        <div class="main col-md-4 col-md-offset-8 col-sm-6 col-sm-offset-6">
+            <div class="login">
+                <img class="logo" src="~/Content/Images/portail-logo.png" />
+                    
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-xs-3 control-label" })
+                    <div class="col-xs-9">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control bright" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                <div id="associes" class="clearfix">
-                    <a class="col-xs-6" href="http://dicj.info/"><img src="~/Content/Images/dicj-logo.png" /></a>
-                    <a class="col-xs-6" href="http://www.cegepjonquiere.ca/"><img src="~/Content/Images/cj-logo.png" /></a>
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-xs-3 control-label" })
+                    <div class="col-xs-9">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control bright" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
                 </div>
+
+                <div class="form-group">
+                    <div class="col-xs-offset-3 col-xs-9">
+                        <div class="checkbox">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
+                    </div>
+                </div>
+
+                <div class="center-align">
+                    <input type="submit" value="Connexion" class="fancy-button" />
+                </div>
+
+            </div>
+            <div class="associes row">
+                <a class="col-xs-6" href="http://dicj.info/"><img src="~/Content/Images/dicj-logo.png" /></a>
+                <a class="col-xs-6" href="http://www.cegepjonquiere.ca/"><img src="~/Content/Images/cj-logo.png" /></a>
             </div>
         </div>
-    </div>
-    @Scripts.Render("~/Scripts/portail.js")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @section Scripts
-    {
-        <script src="@Url.Content("~/Scripts/portail.js")"></script>
-    }
+    </section>
+}
+
 </body>
 </html>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@section Scripts
+{
+    <script src="@Url.Content("~/Scripts/portail.js")"></script>
+}
