--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Create.cshtml
@@ -1,59 +1,66 @@
 ﻿@model ApplicationPlanCadre.Models.DevisMinistere
 
 @{
-    ViewBag.Title = "Console d'administration";
+    ViewBag.Title = "Gestion des devis ministériel";
 }
 
-<div class="container">
+@using (Html.BeginForm("Create", "ConsoleDevisMinistere", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
 
-    <div class="horizontal-form">
+    <div class="container">
+        <div class="form-box">
 
-        @using (Html.BeginForm("Create", "ConsoleDevisMinistere", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
+            <header>
 
-            <div class="form-horizontal form-box">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <h1>@ViewBag.Title</h1>
 
-                <h3>Ajouter un devis ministériel</h3>
-                <hr />
-                <div class="champ">
-                    @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+            </header>
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="field-box col-md-8">
+
+                @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+
+                <div class="element">
+
+                    <p>Création d'un devis</p>
+                    <hr />
+
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.codeProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control col-md-6" })
-                        @Html.ValidationMessageFor(model => model.codeProgramme, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.LabelFor(m => m.codeProgramme)
+                    @Html.DropDownList("codeProgramme", null, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.codeProgramme, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
-                        @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.LabelFor(m => m.annee)
+                    @Html.TextBoxFor(m => m.annee, null, new { @class = "form-control small", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" })
+                    @Html.ValidationMessageFor(m => m.annee, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 2 } })
-                        @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
-                    </div>
+                    @Html.LabelFor(m => m.codeSpecialisation)
+                    @Html.TextBoxFor(m => m.codeSpecialisation, null, new { @class = "form-control small", @maxlength = 2 })
+                    @Html.ValidationMessageFor(m => m.codeSpecialisation, "", new { @class = "text-danger" })
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-3 col-md-9">
-                        <input type="submit" value="Enregistrer" class="fancy-button" />
-                    </div>
+                <div class="element">
+                    <input type="submit" value="Enregistrer" class="fancy-button" />
                 </div>
+
             </div>
-        }
 
+            @Html.Action("_PartialList")
+
+            <div class="element">
+                <a href='@Url.Action("ConsoleAdmin", "Accueil")' class="fancy-button rouge">Retour</a>
+            </div>
+
+        </div>
     </div>
 
-    @Html.Action("_PartialList")
-</div>
+}
