--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
@@ -1,57 +1,55 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.DevisMinistere>
 
-<div class="crud-list">
-    <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.EnteteProgramme.codeProgramme)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.annee)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.specialisation)
-            </th>
-            <th class="action-cell-header">
-                <b>Modifier</b>
-            </th>
-            <th class="action-cell-header">
-                <b>Supprimer</b>
-            </th>
-        </tr>
+<table class="cool-table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(m => m.EnteteProgramme.codeProgramme)
+        </th>
+        <th>
+            @Html.DisplayNameFor(m => m.annee)
+        </th>
+        <th>
+            @Html.DisplayNameFor(m => m.specialisation)
+        </th>
+        <th class="action-cell-header">
+            <b>Modifier</b>
+        </th>
+        <th class="action-cell-header">
+            <b>Supprimer</b>
+        </th>
+    </tr>
 
-        @foreach (var item in Model)
-        {
-            bool valide = item.EnonceCompetence.Count == 0;
-            string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idDevis }) : @Url.Action("Create");
-            string cssClass = valide ? "valide" : "";
-            <tr ondblclick="location.href='@dblclickEvent'" class="@cssClass">
-                <td>
-                    @Html.DisplayFor(modelItem => item.EnteteProgramme.codeProgramme)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.annee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.codeSpecialisation)
-                </td>
-                <td class="action-cell">
-                    @if (valide)
-                    {
-                        <a href='@Url.Action("Edit", new { id = item.idDevis })'>
-                            <span class="glyphicon glyphicon-pencil"><!----></span>
-                        </a>
-                    }
-                </td>
-                <td class="action-cell">
-                    @if(valide)
-                    {
-                        <a href='@Url.Action("DeleteConfirmed", new { id = item.idDevis })'>
-                            <span class="glyphicon glyphicon-trash"><!----></span>
-                        </a>
-                    }
-                </td>
-            </tr>
-        }
-    </table>
-</div>
+    @foreach (var item in Model)
+    {
+        bool valide = item.EnonceCompetence.Count == 0;
+        string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idDevis }) : @Url.Action("Create");
+        string cssClass = valide ? "valide" : "";
+        <tr ondblclick="location.href='@dblclickEvent'" class="@cssClass">
+            <td>
+                @Html.DisplayFor(m => item.EnteteProgramme.codeProgramme)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.annee)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.codeSpecialisation)
+            </td>
+            <td class="action-cell">
+                @if (valide)
+                {
+                    <a href='@Url.Action("Edit", new { id = item.idDevis })'>
+                        <span class="glyphicon glyphicon-pencil"><!----></span>
+                    </a>
+                }
+            </td>
+            <td class="action-cell">
+                @if(valide)
+                {
+                    <a href='@Url.Action("DeleteConfirmed", new { id = item.idDevis })'>
+                        <span class="glyphicon glyphicon-trash"><!----></span>
+                    </a>
+                }
+            </td>
+        </tr>
+    }
+</table>
